<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Customer"
            android:textAlignment="center"
            android:textColor="@color/basic_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spinner_margin_l"
            android:layout_marginRight="@dimen/spinner_margin_l"
            android:layout_marginBottom="@dimen/basic_MarginBottom"
            android:orientation="horizontal"
            android:weightSum="6">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/basic_height"
                android:layout_weight="1"
                android:text="Customer Type"
                android:gravity=""
                android:textSize="@dimen/basic_font"
                android:textStyle="normal|bold" />
            <Spinner
                android:id="@+id/spCustomerType"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/basic_height"
                android:background="@drawable/spinner_bg"
                android:textColor="#000"
                android:layout_weight="5">
            </Spinner>
            <!--<ImageView-->
                <!--android:id="@+id/IVnewCus"-->
                <!--android:layout_width="15dp"-->
                <!--android:layout_height="@dimen/basic_height"-->
                <!--android:layout_weight=".5"-->
                <!--android:src="@drawable/usericon"/>-->
            <!--<ImageView-->
                <!--android:id="@+id/IVcanCus"-->
                <!--android:visibility="gone"-->
                <!--android:layout_width="15dp"-->
                <!--android:layout_height="@dimen/basic_height"-->
                <!--android:layout_weight=".5"-->
                <!--android:src="@drawable/cancle"/>-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <Spinner
                android:visibility="gone"
                android:id="@+id/spCustomerName1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/basic_height"
                android:layout_marginLeft="@dimen/spinner_margin_l"
                android:layout_marginRight="@dimen/spinner_margin_l"
                android:layout_marginBottom="@dimen/basic_MarginBottom"
                android:background="@drawable/spinner_bg"
                android:textSize="@dimen/basic_font" />

            <EditText
                android:id="@+id/txtNewCus"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/basic_height"
                android:layout_marginLeft="@dimen/spinner_margin_l"
                android:layout_marginRight="@dimen/spinner_margin_l"
                android:layout_marginBottom="@dimen/basic_MarginBottom"
                android:background="@drawable/textbox_design"
                android:gravity="center"
                android:hint="@string/customer_name"
                android:inputType="phone"
                android:maxLength="11"
                android:textSize="@dimen/basic_font"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/txtName"
                android:enabled="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/basic_height"
                android:layout_marginLeft="@dimen/spinner_margin_l"
                android:layout_marginRight="@dimen/spinner_margin_l"
                android:layout_marginBottom="@dimen/basic_MarginBottom"
                android:background="@drawable/textbox_design"
                android:gravity="center"
                android:hint="Customer Name"
                android:textSize="@dimen/basic_font"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/txtMobile"
                android:enabled="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/basic_height"
                android:layout_marginLeft="@dimen/spinner_margin_l"
                android:layout_marginRight="@dimen/spinner_margin_l"
                android:layout_marginBottom="@dimen/basic_MarginBottom"
                android:background="@drawable/textbox_design"
                android:gravity="center"
                android:hint="@string/Mobile"
                android:inputType="phone"
                android:maxLength="11"
                android:textSize="@dimen/basic_font"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/txtCusAddress"
                android:enabled="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/basic_height"
                android:layout_marginLeft="@dimen/spinner_margin_l"
                android:layout_marginRight="@dimen/spinner_margin_l"
                android:layout_marginBottom="@dimen/basic_MarginBottom"
                android:background="@drawable/textbox_design"
                android:gravity="center"
                android:hint="@string/CusAddress"
                android:textSize="@dimen/basic_font"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/txtCommission"
                android:enabled="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/basic_height"
                android:layout_marginLeft="@dimen/spinner_margin_l"
                android:layout_marginRight="@dimen/spinner_margin_l"
                android:layout_marginBottom="@dimen/basic_MarginBottom"
                android:background="@drawable/textbox_design"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:hint="% Commission %"
                android:textSize="@dimen/basic_font"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/txtEmail"
                android:enabled="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/basic_height"
                android:layout_marginLeft="@dimen/spinner_margin_l"
                android:layout_marginRight="@dimen/spinner_margin_l"
                android:layout_marginBottom="@dimen/basic_MarginBottom"
                android:background="@drawable/textbox_design"
                android:gravity="center"
                android:hint="Email"
                android:textSize="@dimen/basic_font"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/txtCreditLimit"
                android:enabled="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/basic_height"
                android:layout_marginLeft="@dimen/spinner_margin_l"
                android:layout_marginRight="@dimen/spinner_margin_l"
                android:layout_marginBottom="@dimen/basic_MarginBottom"
                android:background="@drawable/textbox_design"
                android:gravity="center"
                android:hint="Credit Limit"
                android:inputType="numberDecimal"
                android:textSize="@dimen/basic_font"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/spinner_margin_l"
            android:layout_marginRight="@dimen/spinner_margin_l"
            android:layout_marginBottom="@dimen/basic_MarginBottom"
            android:weightSum="2.1">
            <Button
                android:id="@+id/btnCancel"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:background="@drawable/cancel_button"
                android:textColor="@color/white"
                android:text="@string/cancel"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"/>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/single_btn"
                android:text="@string/save"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>