<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipe_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Order List"
            android:textAlignment="center"
            android:textColor="@color/basic_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/spinner_margin_l"
            android:layout_marginRight="@dimen/spinner_margin_l"
            android:layout_marginBottom="@dimen/basic_MarginBottom"
            android:background="@color/basic_title"
            android:weightSum="3">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/CusAddress"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="Contact No"
                android:textAlignment="center"/>


        </LinearLayout>



        <LinearLayout
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/spinner_margin_l"
            android:layout_marginRight="@dimen/spinner_margin_l"
            android:layout_marginBottom="@dimen/basic_MarginBottom"
            android:orientation="horizontal"
            android:weightSum="2">

            <ListView
                android:id="@android:id/list"
                android:layout_width="fill_parent"
                android:layout_height="500dp"
                android:divider="@color/basic_title"
                android:dividerHeight="1dp"
                android:fillViewport="true"
                android:scrollbars="vertical">

            </ListView>
        </LinearLayout>





        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/spinner_margin_l"
            android:layout_marginRight="@dimen/spinner_margin_l"
            android:layout_marginBottom="@dimen/basic_MarginBottom"
            android:weightSum="2.1">
            <Button
                android:id="@+id/btnCancel"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:background="@drawable/cancel_button"
                android:textColor="@color/white"
                android:text="@string/cancel"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"/>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/single_btn"
                android:text="@string/save"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>